# Crawll4ai_rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Implementation Plan - Adding PDF and OpenAPI.md  PRD - Add PDF and OpenAPI Support.md  README.md  app.py  docker-compose.yaml  mcp_server.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yaml
src/: crawl4ai_mcp.py  crawler_crawl4ai.py  crawler_github.py  mcp_server.py  openapi_processor.py  pdf_processor.py  server.py  utils.py
src/providers/: aws_bedrock.py
src/service/: crawl4ai.py  domo.py  github.py  supabase.py
src/tools/: __init__.py  crawl.py  rag.py
src/utils/: chunking.py  convert.py  crawler.py  embeddings.py  files.py
test_data/: payment_api.yaml  sample.txt  sample_api.json  sample_api.yaml  sample_text.txt  simple_api.yaml
tests/: README_weather_agent.md  pydantic_ai_weather_agent_full.py  requirements_weather_agent.txt  test_ingestion.py  test_rag_enhancements.py  weather_agent_gradio_ui.py
